version/0.11/_sources/index.rst.txt
..
   Just reuse the root readme to avoid duplicating the documentation.
   Provide any documentation specific to your online documentation
   here.

PyAnsys Heart |version|
=======================

PyAnsys Heart is a `Python`_ framework for heart modeling using Ansys tools.

.. grid:: 1 2 3 3
   :gutter: 1 2 3 3
   :padding: 1 2 3 3

   .. grid-item-card:: :material-regular:`power_settings_new;1.25em` Getting started
      :link: getting-started
      :link-type: doc

      Learn how to install the package and get started with PyAnsys Heart.

   .. grid-item-card:: :material-regular:`description;1.25em` User guide
      :link: user-guide
      :link-type: doc

      Learn how to use the capabilities of PyAnsys Heart.

   .. grid-item-card:: :material-regular:`code;1.25em` API reference
      :link: api/index
      :link-type: doc

      Explore the API reference for PyAnsys Heart.

   .. grid-item-card:: :material-regular:`library_books;1.25em` Examples
      :link: examples/index
      :link-type: doc

      Explore examples to learn how to use PyAnsys Heart.

   .. grid-item-card:: :material-regular:`people;1.25em` Contributing
      :link: contributing
      :link-type: doc

      Learn how to contribute to PyAnsys Heart.

   .. grid-item-card:: :material-regular:`history;1.25em` Changelog
      :link: changelog
      :link-type: doc

      View the changelog for PyAnsys Heart.


.. toctree::
   :hidden:
   :maxdepth: 2

   getting-started
   user-guide
   api/index
   examples/index
   contributing
   changelog